--- a/src/app/componentes/botones/botones.component.html
+++ b/src/app/componentes/botones/botones.component.html
@@ -2,7 +2,7 @@
     <button routerLink="experiencia" class="css-button-retro--blue z-10 mx-3 my-3" value="Contact me!">experiencia Laboral</button>
     <button routerLink="proyectos" class="css-button-retro--blue z-10 my-3" value="Contact me!">Proyectos</button>
     <button routerLink="skills" class="css-button-retro--blue z-10 mx-3 my-3s" value="Contact me!">Hard & Soft skills</button>
-    <a href="https://google.com.ar" target="_blank"><button class="css-button-retro--blue z-10" my-3 value="Contact me!">Lenguaje</button></a>
+    <button routerLink="footer" class="css-button-retro--blue z-10" my-3 value="Contact me!">Lenguaje</button>
 </div>
 
 <!-- grid grid-cols-2 py-10 justify-items-center justify-self-center -->    
