--- a/src/app/componentes/proyectos/proyectos.component.html
+++ b/src/app/componentes/proyectos/proyectos.component.html
@@ -1,12 +1,28 @@
-<div class="w-full h-full bg-[#FFFFD8] flex justify-center items-center">
-    <div class="object-contain border-2  w-2/4 h-2/4">
-        <div class="">
-            <ul class="text-center">
-                <li>Weather App</li>
-                <li>Poke-NES.dex</li>
-                <li>Cronometro SPA - Angular</li>
-                <li>Lucky Dices SPA - Angular</li>
-                <li>Portfolio Web - Angular</li>
+<div class="w-full h-screen bg-[#FFFFD8] flex justify-center items-center">
+    <div class="">
+        <h1 class="text-4xl text-center mb-4 font-mono font-bold">Proyectos personales</h1>
+        <div class="container border-2  w-fit h-fit shadow-lg">
+            <ul class="grid grid-cols-3 place-content-center">
+                <li class="m-5">Weather App
+                    <img src="https://placeimg.com/200/100/any" alt="">
+                    <a class="text-center mt-4" href="">link</a>
+                </li>
+                <li class="m-5">Poke-NES.dex
+                    <img src="https://placeimg.com/200/100/any" alt="">
+                    <a class="text-center mt-4" href="">link</a>
+                </li>
+                <li class="m-5">Cronometro SPA - Angular
+                    <img src="https://placeimg.com/200/100/any" alt="">
+                    <a class="text-center mt-4" href="">link</a>
+                </li>
+                <li class="m-5">Lucky Dices SPA - Angular
+                    <img src="https://placeimg.com/200/100/any" alt="">
+                    <a class="text-center mt-4" href="">link</a>
+                </li>
+                <li class="m-5">Portfolio Web - Angular
+                    <img src="https://placeimg.com/200/100/any" alt="">
+                    <a class="text-center mt-4" href="">link</a>
+                </li>
             </ul>
         </div>
     </div>
