--- a/src/app/componentes/experiencia/experiencia.component.html
+++ b/src/app/componentes/experiencia/experiencia.component.html
@@ -1,20 +1,17 @@
 <section class="bg-[#FFFFD8] py-10">
-    <h1 class="text-center font-bold text-4xl font-mono py-5">Experiencia Laboral</h1>
-    <div class=" ">
-        <div id="contenedor" class="flex flex-row justify-center flex-wrap items-center">
-            <div id="tarjetas" *ngFor="let trabajo of experiencia" class="bg-[#9D94FF] w-2/5 h-fit rounded-xl border-2 shadow-md mx-5 my-5 py-5 px-2">
-                <div class="flex justify-between p-10 bg-[#CEEFC1] border-2 min-h-full rounded-lg">
-                    <div class="font-mono mx-3" id="contenido_tarjeta">
-                        <span class=" block w-full text-2xl">{{trabajo.empresa}}</span>
-                        <span class="block w-full text-base font-extralight">Lugar: {{trabajo.localizacion}} </span>
-                        <span class="block w-full text-base font-extralight">Fecha inicio: {{trabajo.anioInicio}} - {{trabajo.anioFin}}</span>  
-                    </div>
-                    <div class="flex">
-                        <a href=""><i class="bi bi-pencil-fill mx-2"></i></a>
-                        <a href=""><i class="bi bi-trash3-fill mx-2"></i></a>
-                    </div>
-                </div>
-            </div>
+    <div class="flex justify-center">
+        <h1 class="animate__animated animate__slideInUp my-auto text-center font-bold text-4xl font-mono py-5">Experiencia Laboral</h1>
+        <div class="animate__animated animate__slideInLeft container w-2/4 rounded-lg text-center">
+            <ol  *ngFor="let trabajo of experiencia" class="flex justify-center ">                  
+                <li class="mb-10 ml-4 list-disc bg-[#53AC9A] rounded-lg p-4 border-2 border-black">
+                    <h1 class="font-mono text-xl">{{trabajo.empresa}}</h1>
+                    <div class="absolute w-3 h-3 rounded-full mt-1.5 -left-1.5 border"></div>
+                    <time class="font-mono mb-1 text-sm font-normal leading-none">{{trabajo.anioInicio}} - {{trabajo.anioFin}}</time>
+                    <h3 class="font-mono text-lg font-semibold">{{trabajo.ocupacion}}</h3>
+                    <p class="font-mono mb-4 text-base font-normal">{{trabajo.localizacion}}</p>
+                </li>
+                
+            </ol>
         </div>
     </div>
 
