--- a/src/app/componentes/footer/footer.component.html
+++ b/src/app/componentes/footer/footer.component.html
@@ -1,3 +1,4 @@
+
 <footer class="text-center text-white bg-[#E6F7CD]">
     <div class="container pt-9">
       <div class="flex justify-center mb-9">
@@ -72,8 +73,14 @@
       </div>
     </div>
   
-    <div class="text-center text-gray-700 p-4 bg-[#9D94FF]">
-      © 2022
-      <a class="text-gray-800" href="https://tailwind-elements.com/">Rosales Gaston</a>
+    <div class="font-mono text-black p-4 bg-[#9D94FF]">
+      <div class="flex items-center">
+        <div class="mx-auto text-gray-800">
+          Argentina Programa 2022 - Rosales Gaston
+        </div>
+        <div class="">
+          <a href="#bg"><button class=" border-2 border-black rounded-md p-2 hover:transition-all hover:bg-black hover:text-white"><i class="bi bi-arrow-up-square-fill text-xl"></i> Inicio</button></a>
+        </div>
+      </div>
     </div>
   </footer>
