--- a/src/app/componentes/proyectos/proyectos.component.html
+++ b/src/app/componentes/proyectos/proyectos.component.html
@@ -1,27 +1,19 @@
 <div class="w-full h-screen bg-[#FFFFD8] flex justify-center items-center">
-    <div class="">
+        <div class="animate__animated animate__fadeInLeft container p-6 w-fit ">
         <h1 class="text-4xl text-center mb-4 font-mono font-bold">Proyectos personales</h1>
-        <div class="container border-2  w-fit h-fit shadow-lg">
-            <ul class="grid grid-cols-3 place-content-center">
-                <li class="m-5">Weather App
-                    <img src="https://placeimg.com/200/100/any" alt="">
-                    <a class="text-center mt-4" href="">link</a>
+        <div class="container border-2  w-fit h-fit shadow-lg bg-[#CEEFC1] border-black rounded-xl">
+            <ul class="flex flex-row justify-center mx-5">
+                <li class="bg-[#FFFFD8] rounded-lg border-2 border-black m-10 font-mono font-bold text-lg text-center shadow-2xl">Weather App
+                    <a href="https://github.com/gst-n/WeatherApp-Angular" target="_blank"><img class="rounded-xl object-fill" src="../../../assets/thumbnail-proyects/Weather-app.png" width="200px" alt=""></a>
                 </li>
-                <li class="m-5">Poke-NES.dex
-                    <img src="https://placeimg.com/200/100/any" alt="">
-                    <a class="text-center mt-4" href="">link</a>
+                <li class="bg-[#FFFFD8] rounded-lg border-2 border-black m-10 font-mono font-bold text-lg text-center shadow-2xl">Poke-NES.dex
+                    <a href="https://github.com/gst-n/pokeNES.dex" target="_blank"><img class="rounded-xl object-fill" src="../../../assets/thumbnail-proyects/pokeApp-2.png" width="200px" alt=""></a>
                 </li>
-                <li class="m-5">Cronometro SPA - Angular
-                    <img src="https://placeimg.com/200/100/any" alt="">
-                    <a class="text-center mt-4" href="">link</a>
+                <li class="bg-[#FFFFD8] rounded-lg border-2 border-black m-10 font-mono font-bold text-lg text-center shadow-2xl">Cronometro SPA - Angular
+                    <a href="https://github.com/gst-n/argPro2022-cronometro" target="_blank"><img class="object-cover" src="../../../assets/thumbnail-proyects/Cronometro-ArgentinaPrograma.png" width="200px" alt=""></a>
                 </li>
-                <li class="m-5">Lucky Dices SPA - Angular
-                    <img src="https://placeimg.com/200/100/any" alt="">
-                    <a class="text-center mt-4" href="">link</a>
-                </li>
-                <li class="m-5">Portfolio Web - Angular
-                    <img src="https://placeimg.com/200/100/any" alt="">
-                    <a class="text-center mt-4" href="">link</a>
+                <li class="bg-[#FFFFD8] rounded-lg border-2 border-black m-10 font-mono font-bold text-lg text-center shadow-2xl">Portfolio Web - Angular
+                    <a href="https://github.com/gst-n/portfolio-web" target="_blank"><img class="rounded-xl object-fill" src="https://placeimg.com/200/100/any" alt=""></a>
                 </li>
             </ul>
         </div>
