--- a/src/app/componentes/acerca-de/acerca-de.component.html
+++ b/src/app/componentes/acerca-de/acerca-de.component.html
@@ -4,7 +4,7 @@
             <h1 *ngIf="lenguaje" class="font-mono font-bold text-4xl text-center my-3">{{datita.titleES}}</h1>
             <h1 *ngIf="!lenguaje" class="font-mono font-bold text-4xl text-center my-3">{{datita.title}}</h1>
             <div class="flex justify-center items-center">
-                <div class="font-mono font-bold mx-5">
+                <div class="mb-10 ml-4 shadow-xl bg-[#CEEFC1] rounded-lg p-4 border-2 border-black font-mono font-bold mx-5">
                     <div *ngIf="lenguaje">
                         {{datita.aboutMeEsp}}
                     </div>
