--- a/src/app/componentes/acerca-de/acerca-de.component.html
+++ b/src/app/componentes/acerca-de/acerca-de.component.html
@@ -1,7 +1,7 @@
-<div class="flex ">
+<div class="flex">
     <div class="inline-flex w-full bg-[#FFFFD8] h-fit justify-center">
         <div class="container py-16 col-span-3 w-3/4">
-            <h1 *ngIf="lenguaje" class="font-mono font-bold text-4xl text-center my-3">{{datita.titleES}}</h1>
+            <h1  *ngIf="lenguaje" class="font-mono font-bold text-4xl text-center my-3">{{datita.titleES}}</h1>
             <h1 *ngIf="!lenguaje" class="font-mono font-bold text-4xl text-center my-3">{{datita.title}}</h1>
             <div class="flex justify-center items-center">
                 <div class="mb-10 ml-4 shadow-xl bg-[#CEEFC1] rounded-lg p-4 border-2 border-black font-mono font-bold mx-5">
@@ -11,18 +11,19 @@
                     <div *ngIf="!lenguaje">
                         {{datita.aboutMeIng}}
                     </div>
+                    <button (click)="toggleLenguage()" class="flex mx-auto mt-5 border-2 border-black rounded-md p-4">Es / En</button>
                 </div>
-                <button (click)="toggleLenguage()" class=" css-button-retro--blue z-10">Es / En</button>
-                <div class="flex justify-center">
+                <!-- <div class="flex justify-center">
                     <a href=""><i class="bi bi-pencil-fill mx-2"></i></a>
                     <a href=""><i class="bi bi-trash3-fill mx-2"></i></a>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
 </div>
-<app-botones></app-botones>
+<!-- <app-botones></app-botones> -->
 <app-experiencia></app-experiencia>
 <app-skills></app-skills>
 <app-proyectos></app-proyectos>
 <app-footer></app-footer>
+
