--- a/src/app/componentes/experiencia/experiencia.component.html
+++ b/src/app/componentes/experiencia/experiencia.component.html
@@ -1,7 +1,7 @@
 <section class="bg-[#FFFFD8] py-10 flex justify-center">
-    <div class="flex rounded-lg p-10 border-2 border-black w-4/5 shadow-2xl">
+    <div class="sm:flex rounded-lg p-10 border-2 border-black w-4/5 shadow-2xl">
         <h1 class="mr-10 col-span-1 animate__animated animate__slideInUp my-auto text-center font-bold text-4xl font-mono py-5">Experiencia Laboral</h1>
-        <div class="animate__animated animate__slideInLeft container w-2/4 rounded-lg text-center col-span-1">
+        <div class="animate__animated animate__slideInLeft container sm:w-2/4 rounded-lg text-center col-span-1">
             <li  *ngFor="let trabajo of experiencia" class="list-none">                  
                 <div class="mb-10 ml-4 list-none bg-[#CEEFC1] rounded-lg p-4 border-2 border-black">
                     <h1 class="font-mono text-xl">{{trabajo.empresa}}</h1>
