--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 
-<div class="h-52 w-full " id="bg">
+<div class="h-52 w-screen sm:w-full" id="bg">
     <div class="flex justify-center relative">
         <img class="absolute flex w-48 mt-20 rounded-full border-2" src="../../../assets/Gatito.jpeg" alt="">
     </div>  
