--- a/src/app/componentes/footer/footer.component.html
+++ b/src/app/componentes/footer/footer.component.html
@@ -1,7 +1,7 @@
 
-<footer class="text-center text-white bg-[#E6F7CD]">
+<footer class="w-screen min-w-fit text-center text-white bg-[#E6F7CD]">
     <div class="container pt-9">
-      <div class="flex justify-center mb-9">
+      <div class=" justify-center mb-9">
         <a href="https://twitter.com/Gaaston_1" target="_blank" class="mr-9 text-gray-800">
           <svg
             aria-hidden="true"
