--- a/src/app/componentes/navbar/navbar.component.html
+++ b/src/app/componentes/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="w-full flex justify-between bg-[#CEEFC1] rounded-md bg-opacity-50 fixed z-10 top-0">
+<div class="sm:flex w-screen flex justify-between items-center bg-[#9D94FF] rounded-md bg-opacity-50 fixed z-10 top-0">
     <div class="inline-flex items-center">
         <a routerLink="/"><h1 class="text-3xl font-bold font-mono mx-3">Rosales Gastón</h1></a>
     </div>
@@ -7,13 +7,13 @@
     <fa-icon class="mx-2" [icon]="terminal"></fa-icon></small>
     <div class="flex justify-end w-1/4">
         <div class="">
-            <a href="https://github.com/gst-n?tab=repositories" target="_blank">
+            <a class="my-2" href="https://github.com/gst-n?tab=repositories" target="_blank">
                 <i class="bi-github mx-2 text-3xl" role="img" aria-label="GitHub"></i>
             </a>
-            <a href="https://www.linkedin.com/in/rosalesgstn/" target="_blank">
+            <a class="my-2" href="https://www.linkedin.com/in/rosalesgstn/" target="_blank">
                 <i class="bi bi-linkedin mx-2 text-3xl"></i>
             </a>
-            <a routerLink="/login" href="">
+            <a class="my-2" routerLink="/login" href="">
                 <fa-icon class="mx-2 text-3xl" [icon]="login"></fa-icon>
             </a>
         </div>
