--- a/src/app/componentes/proyectos/proyectos.component.html
+++ b/src/app/componentes/proyectos/proyectos.component.html
@@ -1,8 +1,8 @@
-<div class="w-full h-screen bg-[#FFFFD8] flex justify-center items-center">
-        <div class="animate__animated animate__fadeInLeft container p-6 w-fit ">
-        <h1 class="text-4xl text-center mb-4 font-mono font-bold">Proyectos personales</h1>
-        <div class="container border-2  w-fit h-fit shadow-lg bg-[#CEEFC1] border-black rounded-xl">
-            <ul class="flex flex-row justify-center mx-5">
+<div class="w-full bg-[#FFFFD8] sm:flex justify-center items-center">
+        <div class="animate__animated animate__fadeInLeft container p-6 sm:w-3/4 ">
+            <div class="container border-2 shadow-lg bg-[#CEEFC1] border-black rounded-xl">
+            <h1 class="text-4xl text-center mb-4 font-mono font-bold py-5">Proyectos personales</h1>
+            <ul class="sm:flex justify-center mx-5">
                 <li class="bg-[#FFFFD8] rounded-lg border-2 border-black m-10 font-mono font-bold text-lg text-center shadow-2xl">Weather App
                     <a href="https://github.com/gst-n/WeatherApp-Angular" target="_blank"><img class="rounded-xl object-fill" src="../../../assets/thumbnail-proyects/Weather-app.png" width="200px" alt=""></a>
                 </li>
