--- a/src/app/componentes/skills/skills.component.html
+++ b/src/app/componentes/skills/skills.component.html
@@ -1,12 +1,11 @@
 <div class="bg-[#FFFFD8] py-10 flex justify-center">
     <div class="border-2 border-black w-4/5 shadow-2xl p-5 rounded-md">
         <h1 class="text-center font-mono font-bold text-4xl mb-10 my-10">Habilidades blandas</h1>
-        
         <div class=" mx-auto mb-10 animate__animated animate__fadeInRight p-6 max-w-md bg-[#53AC9A] rounded-lg border-2 border-black">
             <p class="mb-3 font-normal font-mono"> La experiencia de trabajar en diferentes rubros a lo largo de mi vida, me ha capacitado en las siguientes habilidades blandas. </p>
         </div>
         <!-- HABILIDADES BLANDAS -->
-        <div class="flex justify-between">
+        <div class="sm:flex justify-between">
             <circle-progress *ngFor="let skill of softSk" class="w-full"
             [backgroundColor]="'#CEEFC1'"
             [percent]= "100"
@@ -33,7 +32,7 @@
         <div class="animate__animated animate__fadeInRight p-6 max-w-md mx-auto mb-10 bg-[#53AC9A] rounded-lg border border-black">
             <p (onClick)="showSkill()" class="mb-3 font-normal font-mono">Aqui, algunas de las tecnologias que he aprendido en los ultimos años </p>
             <ol *ngIf="mostrarSkills">
-                <li *ngFor="let habilidad of habilidadesDuras">
+                <li  *ngFor="let habilidad of habilidadesDuras">
                     {{habilidad}}
                 </li>
             </ol>
