--- a/src/app/componentes/error404/error404.component.html
+++ b/src/app/componentes/error404/error404.component.html
@@ -1,12 +1,13 @@
-<div id="container" class="flex justify-center text-center">
-    <div class="col-span-1 mt-24">
-        <span class="text-9xl font-mono mt-10 hover:translate-x-10 cursor-pointer">
-            4 0 4 
-        </span>
-        <h5 class="text-center text-6xl my-20">
-            We could't find the page
-            <br> you were looking for.
-            <br> Please contact <a routerLink="/" class="underline underline-offset-1">us</a>
+<div id="container" class="sm:flex justify-center text-center">
+    <span class="text-8xl font-mono mt-10 hover:translate-x-10 cursor-pointer mx-10">
+        error 404 
+    </span>
+    <embed src="../../../assets/404prr/purr-2.png" class="w-3/4 h-3/4">
+    <div class="sm:col-span-1 mt-24">
+        <h5 class="text-center text-4xl my-20 p-10 font-mono m-10">
+            No encontramos lo que estabas buscando,
+            <br> pero encontramos a este michi💛
+            <br> Por favor, <a routerLink="/" class="underline underline-offset-1">contactanos</a>!
         </h5>
     </div>
 </div>
