--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 <div class="flex justify-center" id="patron">
-    <div class="shadow-xl w-1/4 h-3/5 text-center my-auto bg-[#ed6031] border-4 rounded-md">
+    <div class="shadow-xl sm:w-1/4 sm:h-3/5 text-center my-auto bg-[#ed6031] border-4 rounded-md p-10">
         <div class="mt-20">
             <form class="flex justify-center mt-9" action="" class="">
                 <h4 class="font-bold font-mono text-xl">Inicio de sesion</h4>
@@ -8,7 +8,7 @@
                 <input class="shadow-md mt-5 rounded-md mx-auto block w-100" type="text" id="user" placeholder="Usuario">
                 <!-- <label class="block w-100" for="pass">Contraseña</label> -->
                 <input class="shadow-md mt-5 rounded-md mx-auto block w-100" type="password" id="pass" placeholder="Contraseña">
-                <button class="font-mono inline-block border w-2/6 my-5 rounded-md text-center bg-orange-500 hover:bg-[#9D94FF] transition" type="submit">Ingresar</button> 
+                <button class="font-mono inline-block border sm:w-2/6 my-5 rounded-md text-center bg-orange-500 hover:bg-[#9D94FF] transition" type="submit">Ingresar</button> 
             </form>
         </div>
     </div>
