--- a/src/app/componentes/navbar/navbar.component.html
+++ b/src/app/componentes/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="sm:flex w-screen flex justify-between items-center bg-[#9D94FF] rounded-md bg-opacity-50 fixed z-10 top-0">
+<div class="sm:flex w-full flex justify-between items-center bg-[#9D94FF] rounded-md bg-opacity-50 fixed z-10 top-0">
     <div class="inline-flex items-center">
         <a routerLink="/"><h1 class="text-3xl font-bold font-mono mx-3">Rosales Gastón</h1></a>
     </div>
