--- a/src/app/componentes/error404/error404.component.css
+++ b/src/app/componentes/error404/error404.component.css
@@ -3,5 +3,5 @@
     background-repeat: repeat;
     background-position:center;
     background-size: cover;
-    height: 100vh;
+    /* height: 100vh; */
 }
