implementacion del back con el front

--- a/FrontEnd/src/app/componentes/navbar/navbar.component.html
+++ b/FrontEnd/src/app/componentes/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="flex w-full justify-between items-center bg-[#9D94FF] rounded-md bg-opacity-50 ">
     <div class="flex-col items-center">
       <div class="flex-col items-center my-1 mx-3 justify-center">
-          <a routerLink="/"><h1 class="text-2xl font-mono mx-auto px-1">Rosales Gastón</h1></a>
+          <a routerLink="/"><h1 class="text-2xl font-mono mx-auto px-1">{{persona.apellido}} {{persona.nombre}}</h1></a>
             <small class="font-mono text-lg mx-auto">Argentina Programa 2022 
                 <fa-icon class="mx-auto" [icon]="terminal"></fa-icon>
             </small>
